--- a/AgenciaDeViagensViaggio/src/main/webapp/css/header.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/header.css
@@ -10,6 +10,7 @@
 	height: 80px;
 	width: 100%;
 	background-color: #fff;
+	box-shadow: 0px 1px 6px #9f9f9f;
 }
 
 .header-content {
@@ -22,11 +23,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
-
-.logo-img {
-	height: 70px;
-	margin-right: 15px;
 }
 
 .logo span {
