--- a/AgenciaDeViagensViaggio/src/main/webapp/css/site.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/site.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 * {
-	font-family: sans-serif;
+	font-family: 'Open Sans', sans-serif;
 	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
 
+body {
+	background-image: linear-gradient(to right, #c8faf8, #8afff0, #4bc6ff);
+}
+
 a {
-	text-decoration: none;	
+	text-decoration: none;
 }
 
 .container {
@@ -41,7 +45,6 @@ a {
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
 }
 
 .box-btn {
