--- a/AgenciaDeViagensViaggio/src/main/webapp/css/site.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/site.css
@@ -7,7 +7,7 @@
 }
 
 body {
-	background-image: linear-gradient(to right, #c8faf8, #8afff0, #4bc6ff);
+	background-image: linear-gradient(to right, #4bc6ff, #8afff0, #c8faf8);
 }
 
 a {
