--- a/AgenciaDeViagensViaggio/src/main/webapp/css/erro.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/erro.css
@@ -17,14 +17,15 @@
 }
 
 .erro-content a {
-	margin-top: 50px;	
+	margin-top: 50px;
+	text-shadow: 0px 0px 6px rgb(0, 0, 0, 0.15);
 }
 
 .mensagem {
 	font-size: 1.5em;
 	color: #fff;
 	background-color: rgb(231, 76, 60);
-	text-shadow: 0px 0px 3px rgb(0, 0, 0, 0.3);
+	box-shadow: 1px 0px 5px 1px rgb(0, 0, 0, 0.49);
 	border-radius: 5px;
 	padding: 5px 20px;
 	text-align: center;
@@ -33,5 +34,6 @@
 .aviso {
 	font-size: 0.9em;
 	color: rgb(231, 76, 60);
-	margin-top: 15px; 
+	margin-top: 15px;
+	text-shadow: 0px 0px 6px rgb(0, 0, 0, 0.15);
 }
