--- a/AgenciaDeViagensViaggio/src/main/webapp/css/promocaoRead.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/promocaoRead.css
@@ -1,25 +1,15 @@
 @charset "ISO-8859-1";
 
-p {
-	color: #fff;
-	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.45);
-}
-
-.section-destino {
+.section-promo {
 	display: flex;
 	justify-content: center;
 	margin-top: 80px;
 }
 
-.destino-content {
+.promo-content {
 	display: flex;
 	align-items: start;
 	padding: 30px 0px;
-}
-
-.destino-img {
-	max-width: 65%;
-	box-shadow: 0px 0px 5px #0000007d;
 }
 
 .box-detalhes {
@@ -30,14 +20,15 @@ p {
 	height: 50vh;
 }
 
-.local, .preco {
+.text-descricao {
 	font-size: 2em;
-	margin-top: 30px;
-	font-weight: 600;
+	font-weight: bold;
+	color: #ffffff;
+	text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
 
-.preco-obs {
-	font-size: 0.9rem;
+.text-percentual {
+	color: #737373;
 }
 
 .box-acoes {
