--- a/AgenciaDeViagensViaggio/src/main/webapp/css/sucesso.css
+++ b/AgenciaDeViagensViaggio/src/main/webapp/css/sucesso.css
@@ -16,16 +16,18 @@
 	align-items: center;
 }
 
+.sucesso-content a {
+	margin-top: 50px;
+	text-shadow: 0px 0px 6px rgb(0, 0, 0, 0.15);
+}
+
 .mensagem {
 	font-size: 1.5em;
 	color: #fff;
 	background-color: rgb(56, 197, 59);
 	text-shadow: 0px 0px 3px rgb(0, 0, 0, 0.3);
+	box-shadow: 1px 0px 5px 1px rgb(0, 0, 0, 0.49);
 	border-radius: 5px;
 	padding: 5px 20px;
 	text-align: center;
-}
-
-.sucesso-content a {
-	margin-top: 50px;	
 }
